[package]
name = "bitcoin_arch_v2"
version = "0.1.0"
edition = "2021"

[features]
default = [ "std" ]
#std = ["base58/std", "bech32/std", "hashes/std", "hex/std", "internals/std", "io/std", "secp256k1/std", "units/std"]
std = ["hashes/std", "internals/std", "io/std", "units/std", "base58/std", "bech32/std"]

[dependencies]
k256 = { version = "0.13.3", default-features = false, features = ["arithmetic", "alloc", "schnorr"] }
units = { package = "bitcoin-units", version = "0.1.0", default-features = false, features = ["alloc"] }
internals = { package = "bitcoin-internals", version = "0.3.0", features = ["alloc"] }
io = { package = "bitcoin-io", version = "0.1.1", default-features = false, features = ["alloc"] }
hashes = { package = "bitcoin_hashes", version = "0.14.0", default-features = false, features = ["alloc", "io"] }
hex = { package = "hex-conservative", version = "0.2.0", default-features = false, features = ["alloc"] }
base58 = { package = "base58ck", version = "0.1.0", default-features = false }
bech32 = { version = "0.11.0", default-features = false, features = ["alloc"] }
once_cell = { version = "1.18.0", default-features = false, features = ["std"] }
rand = "0.8.5"
hex_lit = "0.1.1"

[dev-dependencies]
serde_json = "1.0.0"
serde_test = "1.0.19"
bincode = "1.3.1"
